--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <br/>
 
         <span>源代码：</span><br/>
-        <a href='https://github.com/ben7th/flappy-html5-bird' target='_blank'>github.com/ben7th/flappy-html5-bird</a><br/>
+        <a href='https://github.com/qiujiangkun/FlappyBird_Coffeescript' target='_blank'>https://github.com/qiujiangkun/FlappyBird_Coffeescript</a><br/>
 
         <span>最后更新：2017.11.07</span>
 
