--- a/index.html
+++ b/index.html
@@ -38,27 +38,33 @@
         <br/>
 
         <span>源代码：</span><br/>
-        <a href='https://github.com/qiujiangkun/FlappyBird_Coffeescript' target='_blank'>https://github.com/qiujiangkun/FlappyBird_Coffeescript</a><br/>
+        <a href='https://github.com/qiujiangkun/FlappyBird_Coffeescript' target='_blank'>FlappyBird_Coffeescript</a><br/>
 
         <span>最后更新：2017.11.07</span>
 
-        <div class="start-screen-recording recording-style-green"><div><div class="rec-dot"></div><span>开始录制</span></div></div><script src="//api.apowersoft.cn/screen-recorder?lang=zh" defer></script>
       </div>
-      <br/>
-
-
+      <hr/>
+      <div>
+        <p>开启作弊:<br />按F12控制台输入window.AI_ON = 1</p>
+        <p>修改帧数:<br />window.game.runner.FPS = 帧数</p>
+        <p>修改速度:<br />window.game.runner.SPEED_UP = 倍速</p>
+      </div>
+      <br />
     </div>
+    <div class = "record">
+      <div class="start-screen-recording recording-style-green record">
+        <div>
+          <div class="rec-dot">
+          </div>
+          <span>开始录制</span>
+        </div>
+      </div>
+    </div>
+    <script src="//api.apowersoft.cn/screen-recorder?lang=zh" defer></script>
 
     <script type="text/javascript" src="ui/lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="ui/lib/coffee-script.js"></script>
     <script type="text/coffeescript" src="ui/bird.js.coffee"></script>
 
-    <script>
-      bShare.addEntry({
-        title: '我是一只小小鸟 - Flappy Bird HTML5 版',
-        summary: '原版神似度高达 90%，小伙伴们都来试试吧。记得用 Chrome / Firefox 访问噢 ~',
-        pic: 'http://ben7th.github.io/flappy-html5-bird/cover.png'
-      })
-    </script>
   </body>
 </html>
