--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
-<!DOCTYPE html>
 <html lang='zh'>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Flappy Bird 1.0</title>
     <link href="ui/bird.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="ui/document.css" media="screen" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="//apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css" />
+    <link rel="stylesheet" href="http://www.runoob.com/try/demo_source/jqueryui/style.css" />
+    <script src="http://api.apowersoft.cn/screen-recorder?lang=zh" defer></script>
+    <script type="text/javascript" src="ui/lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="ui/lib/coffee-script.js"></script>
+    <script type="text/coffeescript" src="ui/bird.js.coffee"></script>
+    <script type="text/javascript" src="//apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+    <script type="text/coffeescript" src="data/func.coffee"></script>
+    <script>
+        $(function() {
+            $( "#aibutm" )
+                .button()
+                .click(function() {
+                    window.AI_ON = !window.AI_ON;
+                    $( "#ailabel" ).html('<span class="ui-button-text">' + (window.AI_ON ? "关闭AI" : "开启AI") + '</span>')
+
+            });
+            $( "#fpsbutm" )
+                .button()
+                .click(function () {
+                    window.game.runner.FPS = parseFloat($( "#fpstext" ).val());
+                    window.game.runner.set_speed();
+            });
+            $( "#speedbutm" )
+                .button()
+                .click(function () {
+                    window.game.runner.BOOST_UP = parseFloat($( "#speedtext" ).val());
+                    window.game.runner.set_speed();
+            });
+            $( "#topbutton" )
+                .button()
+                .click(function () {
+                    window.getHighScore();
+                });
+        });
+    </script>
+    <script src = "http://pv.sohu.com/cityjson?ie=utf-8"></script>
+    <script>
+        console.log(returnCitySN['cip'])
+    </script>
   </head>
+
   <body>
     <div class='ct-p1'>
 
@@ -45,9 +85,10 @@
       </div>
       <hr/>
       <div>
-        <p>开启作弊:<br />按F12控制台输入window.AI_ON = 1</p>
-        <p>修改帧数:<br />window.game.runner.FPS = 帧数</p>
-        <p>修改速度:<br />window.game.runner.SPEED_UP = 倍速</p>
+        <p><input type="checkbox" id="aibutm"><label id="ailabel" for="aibutm">启用AI</label>
+            <input type="checkbox" id="topbutton"><label id="toplabel" for="topbutton">排行榜</label></p>
+        <p><label for="fpstext">帧数:</label><input type="text" id="fpstext" value="60"><button type="button" id="fpsbutm">修改帧数</button></p>
+        <p><label for="speedtext">速度:</label><input type="text" id="speedtext" value="1.0"><button type="button" id="speedbutm">修改速度</button></p>
       </div>
       <br />
     </div>
@@ -60,11 +101,11 @@
         </div>
       </div>
     </div>
-    <script src="//api.apowersoft.cn/screen-recorder?lang=zh" defer></script>
+    <div id="msg_box"></div>
 
-    <script type="text/javascript" src="ui/lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="ui/lib/coffee-script.js"></script>
-    <script type="text/coffeescript" src="ui/bird.js.coffee"></script>
+    <div class="top10" id="topscoretext"></div>
 
   </body>
+
+
 </html>
