--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html lang='zh'>
   <head>
-      <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <title>Flappy Bird 1.0</title>
       <link href="ui/bird.css" media="screen" rel="stylesheet" type="text/css" />
       <link href="ui/document.css" media="screen" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="//apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css" />
-      <link rel="stylesheet" href="http://www.runoob.com/try/demo_source/jqueryui/style.css" />
-      <script src="http://api.apowersoft.cn/screen-recorder?lang=zh" defer></script>
+      <link rel="stylesheet" href="https://www.runoob.com/try/demo_source/jqueryui/style.css" />
+      <script src="https://api.apowersoft.cn/screen-recorder?lang=zh" defer></script>
       <script type="text/javascript" src="ui/lib/jquery-2.1.0.min.js"></script>
       <script type="text/javascript" src="ui/lib/coffee-script.js"></script>
       <script type="text/coffeescript" src="ui/bird.js.coffee"></script>
