--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang='zh'>
   <head>
+      <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <title>Flappy Bird 1.0</title>
       <link href="ui/bird.css" media="screen" rel="stylesheet" type="text/css" />
