--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               });
       });
     </script>
-    <script src = "http://pv.sohu.com/cityjson?ie=utf-8"></script>
+    <script src = "https://pv.sohu.com/cityjson?ie=utf-8"></script>
     <script>
         console.log(returnCitySN['cip'])
     </script>
