--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang='zh'>
+<html>
   <head>
       <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
